# mlops-2025-hibarezek

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_batch_inference_pipeline.py  run_training_pipeline.py
artifacts/: model_metadata_20260105_204922.json  onehot_encoder.pkl  standard_scaler.pkl  training_results_20260105_204922.json
configs/: config.yaml
scripts/: entrypoint.sh  feature_engineer.py  inference.py  inference_cli.py  preprocess.py  train.py  train_cli.py
src/ml_project/: __init__.py
src/ml_project/data/: Base_DataLoader.py  DataLoader.py  __init__.py
src/ml_project/features/: Base_FeatureEngineer.py  FeatureEngineer.py  __init__.py
src/ml_project/inference/: Base_Inference.py  __init__.py  inference.py
src/ml_project/pipelines/: __init__.py  pipeline.py
src/ml_project/preprocess/: Base_Preprocessor.py  __init__.py  preprocessor.py
src/ml_project/train/: Base_Trainer.py  __init__.py  trainer.py
src/ml_project/utils/: __init__.py  helpers.py
