[project]
name = "ml-project"
version = "0.1.0"
description = "MLOps NYC Taxi Trip Duration Pipeline"
readme = "README.md"
authors = [
    { name = "Hiba Rezek", email = "hibam.2003rezek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "joblib>=1.4.2",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
# For AWS SageMaker deployment (only needed when deploying to cloud)
aws = [
    "sagemaker>=3.3.0",
    "boto3>=1.35.0",
]
# For experiment tracking
mlflow = [
    "mlflow>=2.17.0",
]

[project.scripts]
train = "scripts.train_cli:main"
inference = "scripts.inference_cli:main"

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
